Add js interaction

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -20,12 +22,17 @@
 				<li>
 					<input type="checkbox" class="checkbox">
 					Milk
-					<div class="delete"><i class="fa fa-minus"></i></div>
+					<div class="minus"><i class="fa fa-minus"></i></div>
+				</li>
+				<li>
+					<input type="checkbox" class="checkbox">
+					Cereal
+					<div class="minus"><i class="fa fa-minus"></i></div>
 				</li>
 				<li>
 					<input type="checkbox" class="checkbox">
 					Vegetables
-					<div class="delete"><i class="fa fa-minus"></i></div>
+					<div class="minus"><i class="fa fa-minus"></i></div>
 				</li>
 			</ul>
 		</div>
